WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
307439
[block-in-inline] Incorrect float position when margin is present
https://bugs.webkit.org/show_bug.cgi?id=307439
Summary
[block-in-inline] Incorrect float position when margin is present
alan
Reported
2026-02-10 08:31:33 PST
ssia
Attachments
Patch
(11.24 KB, patch)
2026-02-10 08:37 PST
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(11.24 KB, patch)
2026-02-10 10:06 PST
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2026-02-10 08:37:41 PST
Created
attachment 478302
[details]
Patch
alan
Comment 2
2026-02-10 10:06:22 PST
Created
attachment 478305
[details]
[fast-cq]Patch
EWS
Comment 3
2026-02-10 10:47:04 PST
Committed
307188@main
(cd1b035579cc): <
https://commits.webkit.org/307188@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 478305
[details]
.
Radar WebKit Bug Importer
Comment 4
2026-02-10 10:48:13 PST
<
rdar://problem/170071917
>
EWS
Comment 5
2026-02-16 15:07:39 PST
Committed
305413.304@safari-7624-branch
(97fa53ec9d91): <
https://commits.webkit.org/305413.304@safari-7624-branch
> Reviewed commits have been landed. Closing PR #4472 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug