Cherry-pick cd1b035579cc. rdar://170083750

[block-in-inline] Incorrect float position when margin is present
    https://bugs.webkit.org/show_bug.cgi?id=307439

    Reviewed by Antti Koivisto.

    1. Float boxes "avoid" margin boxes.
    2. We don't adjust the line rect with block's margin until after we come across inline content (see comment in applyMarginInBlockDirectionIfNeeded)

    This fix addresses the case when the very first (contentful) inline item is a float box.
    In this case we need to apply the margin adjustment the same way we do when we see inline content.

    Test: fast/inline/block-in-inline-float-and-margin.html

    * LayoutTests/fast/inline/block-in-inline-float-and-margin-expected.html: Added.
    * LayoutTests/fast/inline/block-in-inline-float-and-margin.html: Added.
    * Source/WebCore/layout/formattingContexts/inline/InlineLineBuilder.cpp:
    (WebCore::Layout::LineBuilder::applyMarginInBlockDirectionIfNeeded):
    (WebCore::Layout::LineBuilder::tryPlacingFloatBox):
    (WebCore::Layout::LineBuilder::handleInlineContent):
    * Source/WebCore/layout/formattingContexts/inline/InlineLineBuilder.h:

    Canonical link: https://commits.webkit.org/307188@main

Identifier: 305413.304@safari-7624-branch